--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -7,7 +7,7 @@
             class="rounded-circle border-5"
             src="{{user.photo}}"
             alt="avt"
-            style="height: 90px; cursor: pointer;"
+            style="height: 90px; width: 90px; cursor: pointer;"
             data-bs-toggle="modal"
             data-bs-target="#changeAvatar"
           />
