--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -56,6 +56,27 @@
         </form>
       </div>
     </div>
+
+    <div class="row scrollable">
+      <div>
+        {{#each people}}
+          <div class="row userTag mt-2 mb-2 ms-2">
+            <div class="col-3">
+              <img
+                src="{{this.photo}}"
+                alt="{{this.name}}"
+                class="icon-img-choose-chat"
+              />
+            </div>
+
+            <div class="col-9">
+              <h5>{{this.name}}</h5>
+            </div>
+          </div>
+        {{/each}}
+      </div>
+
+    </div>
   </div>
 
   <div class="col-8">
@@ -73,6 +94,42 @@
         </form>
       </div>
     </div>
+
+    <div
+      class="chatSpace border-bottom border-5"
+      style="height: 85%; overflow: auto;"
+    >
+      <div class="mgsRight">
+        <span class="nameOfUserOnChat" style="font-weight: bolder;"> Hải </span>
+        <p class="mgs">Sao ku</p>
+      </div>
+
+      <div class="mgsLeft">
+        <span class="nameOfMeOnChat" style="font-weight: bolder;"> Hoàng </span>
+        <p class="mgs">Concak</p>
+      </div>
+    </div>
+
+    <form class="d-flex mt-2" role="search">
+      <input
+        class="form-control me-2 border-1"
+        type="search"
+        placeholder="Enter message..."
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success border-1" type="submit"><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-send"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"
+          ></path>
+        </svg></button>
+    </form>
   </div>
 
 </div>
